WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235945
AX: nullptr crash under AccessibilityRenderObject::computeAccessibilityIsIgnored
https://bugs.webkit.org/show_bug.cgi?id=235945
Summary
AX: nullptr crash under AccessibilityRenderObject::computeAccessibilityIsIgnored
Antti Koivisto
Reported
2022-02-01 03:34:17 PST
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x1d4d9ef0c WebCore::InlineIterator::firstTextBoxFor(WebCore::RenderText const&) + 32 (/System/Volumes/Data/SWE/macOS/BuildRoots/26a668749f/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7613.1.14.1.7/Source/WebCore/./layout/integration/LayoutIntegrationLineLayout.cpp:94) 1 com.apple.WebCore 0x1d539d47c WebCore::RenderText::hasRenderedText() const + 36 (/System/Volumes/Data/SWE/macOS/BuildRoots/26a668749f/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7613.1.14.1.7/Source/WebCore/./layout/integration/InlineIteratorTextBox.cpp:154) 2 com.apple.WebCore 0x1d539d47c WebCore::RenderText::hasRenderedText() const + 36 (/System/Volumes/Data/SWE/macOS/BuildRoots/26a668749f/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7613.1.14.1.7/Source/WebCore/./layout/integration/InlineIteratorTextBox.cpp:154) 3 com.apple.WebCore 0x1d4477f24 WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored() const + 1624 (/System/Volumes/Data/SWE/macOS/BuildRoots/26a668749f/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7613.1.14.1.7/Source/WebCore/./accessibility/AccessibilityRenderObject.cpp:1402)
Attachments
Patch
(1.93 KB, patch)
2022-02-01 03:47 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-01 03:34:27 PST
Comment hidden (obsolete)
<
rdar://problem/88320639
>
Antti Koivisto
Comment 2
2022-02-01 03:35:22 PST
rdar://88217815
Antti Koivisto
Comment 3
2022-02-01 03:47:57 PST
Created
attachment 450511
[details]
Patch
EWS
Comment 4
2022-02-01 07:14:02 PST
Committed
r288874
(
246626@main
): <
https://commits.webkit.org/246626@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450511
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug