AX: nullptr crash under AccessibilityRenderObject::computeAccessibilityIsIgnored https://bugs.webkit.org/show_bug.cgi?id=235945 rdar://88217815

Reviewed by Andres Gonzalez.

This is similar to https://bugs.webkit.org/show_bug.cgi?id=161276.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored const):

m_renderer is a WeakPtr and can become null during parentObjectUnignored call, same as
the case below.



Canonical link: https://commits.webkit.org/246626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288874 268f45cc-cd09-0410-ab3c-d52691b4dbfc